force-app/main/default/objects/Expense__c/fields/Approval_Steps__c.field-meta.xml
<CustomField>
    <fullName>Approval_Steps__c</fullName>
    <label>Approval Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step 1</fullName>
            </value>
            <value>
                <fullName>Step 2</fullName>
            </value>
            <value>
                <fullName>Step 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>