force-app/main/default/objects/Expense__c/fields/Banner_and_Leaflet__c.field-meta.xml
<CustomField>
    <fullName>Banner_and_Leaflet__c</fullName>
    <label>Banner and Leaflet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>