force-app/main/default/objects/Expense__c/fields/City_Type_c__c.field-meta.xml
<CustomField>
    <fullName>City_Type_c__c</fullName>
    <label>City_Type__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>A Class</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>