force-app/main/default/objects/Expense__c/fields/Co_visit_expense_Created__c.field-meta.xml
<CustomField>
    <fullName>Co_visit_expense_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co visit expense Created</label>
    <type>Checkbox</type>
</CustomField>