force-app/main/default/objects/Expense__c/fields/Combined_Visit__c.field-meta.xml
<CustomField>
    <fullName>Combined_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combined Visit</label>
    <type>Checkbox</type>
</CustomField>