force-app/main/default/objects/Expense__c/fields/Created_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Created_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Automatically</label>
    <type>Checkbox</type>
</CustomField>