force-app/main/default/objects/Expense__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <formula>Submitted_by__r.Employee_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>