force-app/main/default/objects/Expense__c/fields/Employee_Grade__c.field-meta.xml
<CustomField>
    <fullName>Employee_Grade__c</fullName>
    <formula>TEXT(Submitted_by__r.Grade__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Grade</label>
    <type>Text</type>
</CustomField>