force-app/main/default/objects/Expense__c/fields/Exceptional_Expense_Image__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Expense_Image__c</fullName>
    <formula>IF(Exceptional_Expense__c == true, IMAGE(&quot;/resource/1644926708000/Red&quot;, &apos;Red&apos;,30,30),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exceptional Expense</label>
    <type>Text</type>
</CustomField>