force-app/main/default/objects/Expense__c/fields/Expense_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date_Formula__c</fullName>
    <formula>Expense_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Date</label>
    <type>Date</type>
</CustomField>