force-app/main/default/objects/Expense__c/fields/Expense_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expense_End_Date_Formula__c</fullName>
    <formula>Expense_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense End Date</label>
    <type>DateTime</type>
</CustomField>