force-app/main/default/objects/Expense__c/fields/Expense_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Expense_End_Time__c</fullName>
    <label>Expense End Date</label>
    <type>DateTime</type>
</CustomField>