force-app/main/default/objects/Expense__c/fields/Expense_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_From_Date__c</fullName>
    <label>Expense From Date</label>
    <type>Date</type>
</CustomField>