force-app/main/default/objects/Expense__c/fields/Expense_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Start_Date__c</fullName>
    <label>Expense Start Date</label>
    <type>DateTime</type>
</CustomField>