force-app/main/default/objects/Expense__c/fields/Expense_Start_Date_Formula_c__c.field-meta.xml
<CustomField>
    <fullName>Expense_Start_Date_Formula_c__c</fullName>
    <formula>Expense_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Start Date</label>
    <type>DateTime</type>
</CustomField>