force-app/main/default/objects/Expense__c/fields/Expense_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_To_Date__c</fullName>
    <label>Expense To Date</label>
    <type>Date</type>
</CustomField>