force-app/main/default/objects/Expense__c/fields/Food_And_Room__c.field-meta.xml
<CustomField>
    <fullName>Food_And_Room__c</fullName>
    <label>Food And Room</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>