force-app/main/default/objects/Expense__c/fields/From_Station__c.field-meta.xml
<CustomField>
    <fullName>From_Station__c</fullName>
    <label>From Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>