force-app/main/default/objects/Expense__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>TEXT( Submitted_by__r.Grade__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grade</label>
    <type>Text</type>
</CustomField>