force-app/main/default/objects/Expense__c/fields/Hotel_Stay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Stay_Amount__c</fullName>
    <label>Hotel Stay Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>