force-app/main/default/objects/Expense__c/fields/Include_TA_DA__c.field-meta.xml
<CustomField>
    <fullName>Include_TA_DA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include TA/DA</label>
    <type>Checkbox</type>
</CustomField>