force-app/main/default/objects/Expense__c/fields/Misc__c.field-meta.xml
<CustomField>
    <fullName>Misc__c</fullName>
    <label>Misc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>