force-app/main/default/objects/Expense__c/fields/Mixing__c.field-meta.xml
<CustomField>
    <fullName>Mixing__c</fullName>
    <label>Mixing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>