force-app/main/default/objects/Expense__c/fields/Mode_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Travel__c</fullName>
    <label>Mode of Travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleeper Class</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>AC Deluxe Bus</fullName>
            </value>
            <value>
                <fullName>3rd AC</fullName>
            </value>
            <value>
                <fullName>Chair Car</fullName>
            </value>
            <value>
                <fullName>Volvo</fullName>
            </value>
            <value>
                <fullName>Air Economy</fullName>
            </value>
            <value>
                <fullName>2nd AC</fullName>
            </value>
            <value>
                <fullName>1st Ac</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Shared Auto</fullName>
            </value>
            <value>
                <fullName>personal 2-wheeler</fullName>
            </value>
            <value>
                <fullName>4-wheeler</fullName>
            </value>
            <value>
                <fullName>Cab</fullName>
            </value>
            <value>
                <fullName>personal car</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>