force-app/main/default/objects/Expense__c/fields/Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Name_Auto_Number__c</fullName>
    <description>Just for Updating Name . Donot add on layout</description>
    <displayFormat>{0000}</displayFormat>
    <label>Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>