force-app/main/default/objects/Expense__c/fields/Paper_Insertion__c.field-meta.xml
<CustomField>
    <fullName>Paper_Insertion__c</fullName>
    <label>Paper Insertion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>