force-app/main/default/objects/Expense__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roles</label>
    <type>Text</type>
</CustomField>