force-app/main/default/objects/Expense__c/fields/Send_Approval__c.field-meta.xml
<CustomField>
    <fullName>Send_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Approval</label>
    <type>Checkbox</type>
</CustomField>