force-app/main/default/objects/Expense__c/fields/Send_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Approval_Date__c</fullName>
    <label>Send Approval Date</label>
    <type>Date</type>
</CustomField>