force-app/main/default/objects/Expense__c/fields/Sponsorship_Fees__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Fees__c</fullName>
    <label>Sponsorship Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>