force-app/main/default/objects/Expense__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Adding Expense</fullName>
            </value>
            <value>
                <fullName>Attaching Visit</fullName>
            </value>
            <value>
                <fullName>Rework by Reporting Person</fullName>
            </value>
            <value>
                <fullName>Sent for Approval to Reporting Person</fullName>
            </value>
            <value>
                <fullName>Approved by Reporting Person</fullName>
            </value>
            <value>
                <fullName>Reassigned to Reporting Person by NSM</fullName>
            </value>
            <value>
                <fullName>Sent for Approval to NSM</fullName>
            </value>
            <value>
                <fullName>Approved by NSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>