force-app/main/default/objects/Expense__c/fields/Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>Stage_Formula__c</fullName>
    <formula>TEXT( Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>