force-app/main/default/objects/Expense__c/fields/Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Status_Formula__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>