force-app/main/default/objects/Expense__c/fields/Stay_Type__c.field-meta.xml
<CustomField>
    <fullName>Stay_Type__c</fullName>
    <label>Stay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel Stay</fullName>
            </value>
            <value>
                <fullName>Self Arrangement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>