force-app/main/default/objects/Expense__c/fields/TA_DA_Amount__c.field-meta.xml
<CustomField>
    <fullName>TA_DA_Amount__c</fullName>
    <label>TA/DA Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>