force-app/main/default/objects/Expense__c/fields/TADA_Amount__c.field-meta.xml
<CustomField>
    <fullName>TADA_Amount__c</fullName>
    <label>TADA Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>