force-app/main/default/objects/Expense__c/fields/To_Station__c.field-meta.xml
<CustomField>
    <fullName>To_Station__c</fullName>
    <label>To Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>