force-app/main/default/objects/Expense__c/fields/Total_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Formula__c</fullName>
    <formula>IF(RecordType.Name == &apos;TA/DA&apos;, TADA_Amount__c , Total_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>