force-app/main/default/objects/Expense__c/fields/Total_Amount_Report__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Report__c</fullName>
    <formula>If( RecordType.Name == &apos;Upcountry Travel&apos;,
Total_Amount__c, IF( RecordType.Name == &apos;Local Travel&apos;, Total_Amount__c,
If( RecordType.Name == &apos;TA/DA&apos;,TADA_Amount__c ,0))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>