force-app/main/default/objects/Expense__c/fields/Total_Distance_Travelled_kms__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_Travelled_kms__c</fullName>
    <formula>Travelled_KMs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Distance Travelled (kms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>