force-app/main/default/objects/Expense__c/fields/Total_Distance_Travelled_kms_Upcountry__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_Travelled_kms_Upcountry__c</fullName>
    <label>Total Distance Travelled (kms)</label>
    <summarizedField>Expense_Line_Item__c.Distance_Travelled__c</summarizedField>
    <summaryForeignKey>Expense_Line_Item__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>