force-app/main/default/objects/Expense__c/fields/Travelled_KMs__c.field-meta.xml
<CustomField>
    <fullName>Travelled_KMs__c</fullName>
    <label>Travelled KMs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>