force-app/main/default/objects/Expense__c/fields/Type_of_Expense__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Expense__c</fullName>
    <formula>&apos;dummy&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Expense</label>
    <type>Text</type>
</CustomField>