force-app/main/default/objects/Expense__c/fields/Type_Of_Expense_value__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Expense_value__c</fullName>
    <label>Type Of Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Upcountry Travel</fullName>
            </value>
            <value>
                <fullName>TA/DA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>