force-app/main/default/objects/Expense__c/fields/Unplanned_Visit__c.field-meta.xml
<CustomField>
    <fullName>Unplanned_Visit__c</fullName>
    <formula>IF( Visit_Unplanned__c == true, IMAGE(&quot;/resource/1644926708000/Red&quot;, &apos;Red&apos;,30,30),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unplanned Visit</label>
    <type>Text</type>
</CustomField>