force-app/main/default/objects/Expense__c/fields/Up_Country_Travel_with_own_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Up_Country_Travel_with_own_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Up Country Travel with own Vehicle</label>
    <type>Checkbox</type>
</CustomField>