force-app/main/default/objects/Expense__c/fields/User_Expense__c.field-meta.xml
<CustomField>
    <fullName>User_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Expense</label>
    <referenceTo>User_Expense__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>