force-app/main/default/objects/Expense__c/fields/User_wise_Daily_Distance_Traveled_Id__c.field-meta.xml
<CustomField>
    <fullName>User_wise_Daily_Distance_Traveled_Id__c</fullName>
    <label>User wise Daily Distance Traveled Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>