force-app/main/default/objects/Expense__c/fields/Visit_Unplanned__c.field-meta.xml
<CustomField>
    <fullName>Visit_Unplanned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Unplanned</label>
    <type>Checkbox</type>
</CustomField>