force-app/main/default/objects/Expense__c/recordTypes/Local_Travel.recordType-meta.xml
<RecordType>
    <fullName>Local_Travel</fullName>
    <active>true</active>
    <label>Local Travel</label>
</RecordType>