force-app/main/default/objects/Expense__c/recordTypes/TA_DA.recordType-meta.xml
<RecordType>
    <fullName>TA_DA</fullName>
    <active>false</active>
    <label>TA/DA</label>
</RecordType>