force-app/main/default/objects/Expense__c/recordTypes/Upcountry_Travel.recordType-meta.xml
<RecordType>
    <fullName>Upcountry_Travel</fullName>
    <active>false</active>
    <label>Upcountry Travel</label>
</RecordType>